--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,35 +95,33 @@ ul li:hover ul a:hover {
 /*---- INICIO DEL MAIN ----*/
 /*---- BUSCADOR ----*/
 .buscadorfondo {
-    padding: 20px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 1fr 120px;
     font-style: italic;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(255, 102, 0);
-    font-family: Verdana;
-    color: #f3f3f3;
-    height: 450px;
 }
 
 .buscadortitulo {
-    margin-top: 80px;
-    font-style: oblique;
+    margin-top: 100px;
     font-size: 25px;
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #f3f3f3;
 }
 
 .wrapper {
-    padding: 40px 0px 40px 0px;
+    padding: 30px 0px 0px 0px;
+    color: white;
+    text-align: center;
 }
 
 .wrapper h2 {
-    text-align: center;
-    color: white;
     font-size: 60px;
 }
 
 .wrapper p {
-    text-align: center;
     font-size: 30px;
 }
 
@@ -149,17 +147,29 @@ span:before {
 }
 
 .fondopropiedades {
-    background-color: lightgray;
-    border-radius: 10px;
     display: grid;
-    margin-top: auto;
     grid-template-columns: auto auto auto auto;
+    grid-template-rows: 55%;
+    align-content: center;
+}
+
+.formulario {
+    background-color: lightgray;
+}
+
+.fondopropiedades form {
+    background-color: lightgray;
+}
+
+.fondopropiedades div {
+    background-color: lightgray;
 }
 
 
 input[type=text],
 select {
     border-radius: 4px;
+
 }
 
 input[type=search],
@@ -168,10 +178,7 @@ select {
     border-radius: 4px;
     box-sizing: border-box;
     width: 95%;
-    padding: 10px !important;
-    margin: 10px !important;
     display: inline-block;
-
 }
 
 .button {
@@ -180,8 +187,6 @@ select {
     border-radius: 5px;
     text-transform: uppercase;
     font-weight: 300;
-    width: 90% !important;
-    margin: 10px !important;
 }
 
 .button:hover {
