--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1666,12 +1666,35 @@ select {
 /*----FIN PAGINA CONTACTO -----*/
 
 /*---- PAGINA POLITICAS -----*/
+.polprivacidad{
+    padding: 20px;
+    font-style: italic;
+    background-color: rgb(255, 102, 0);
+    font-family: Verdana;
+    color: #f3f3f3;
+    height: 180px;
+}
+
+.polprivacidad h1 {
+    margin-top: 90px;
+    font-style: oblique;
+    font-size: 25px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #f3f3f3;
+}
 
 .politicas {
     padding: 5%;
     font-family: Verdana;
     color: black;
     text-align: justify;
+}
+.politicas h2 {
+    margin-top: 10px;
+    color: black;
+    text-align: left;
+    font-size: 15px;
 }
 
 /*----FIN PAGINA POLITICAS -----*/
