--- a/css/estilos.css
+++ b/css/estilos.css
@@ -326,7 +326,7 @@ li {
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 50% 50%;
-    background-image: url(/img/Casa-nueva-casa-antigua.webp);
+    background-image: url(../img/Casa-nueva-casa-antigua.webp);
     background-size: cover;
     height: 400px;
 }
