--- a/css/estilos.css
+++ b/css/estilos.css
@@ -900,17 +900,16 @@ select {
 .menuretorno {
     padding: 15px 0 0 0;
     display: grid;
-    grid-auto-flow: column; 
-    grid-template-columns: 5% 15%;
+    grid-auto-flow: row; 
     grid-template-rows: 1fr; 
     gap: 0px 10px;
     grid-template-areas:
         "index page";
     font-family: sans-serif;
     font-weight: 400;
-    color: red;
     justify-content: right;
     font-size: 15px;
+    margin-right: 20px;
 }
 
 .index {
@@ -935,6 +934,51 @@ select {
 }
 
 /*---FIN MENU RETORNO---*/
+/*---BOTON WHATSAPP---*/
+.whatsapp {
+    position:fixed;
+    width:50px;
+    height:50px;
+    bottom:5px;
+    right:18px;
+    background-color:#25d366;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    font-size:30px;
+    z-index:100;
+  }
+  
+  .whatsapp-icon {
+    margin-top:10px;
+  }
+/*---FIN BOTON WHATSAPP---*/
+
+
+/*---BOTON IR AL TOP---*/
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    background: rgb(255, 102, 0);
+    border: 2px solid white;
+    color: #fff;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 50%;
+    right: 20px;
+    bottom: 60px;
+    transition: all 0.5s;
+}
+
+.back-to-top i {
+    padding-top: 12px;
+    color: #fff;
+}
+/*---FIN BOTON IR AL TOP---*/
+
 /*----FIN DISEÑOS DESKTOP -----*/
 
 
@@ -943,7 +987,6 @@ select {
 /*----------INICIO RESPONSIVE MOBILE HASTA 480PX-----------*/
 
 @media screen and (max-width: 480px) {
-
     /*----------responsive menu y hamburguesa MOBILE-----------*/
     .checkbtn {
         display: block;
@@ -1171,7 +1214,7 @@ select {
     }
 
 
-    /*------- FIN DESTACADAS  RESPONSIVE MOBILE -----*/
+    /*------- FIN DESTACADAS RESPONSIVE MOBILE -----*/
 
     /*---- POR QUE CONTACTARNOS RESPONSIVE MOBILE  ----*/
     .porquecontactarnos {
@@ -1450,6 +1493,9 @@ select {
     /*----FIN PAGINA CONTACTO RESPONSIVE MOBILE -----*/
     .polprivacidad h1 {
         font-size: 20px;
+    }
+    .politicas{
+        hyphens: auto;
     }
 }
 
@@ -1789,46 +1835,3 @@ select {
 
 
 
-
-.whatsapp {
-    position:fixed;
-    width:50px;
-    height:50px;
-    bottom:5px;
-    right:18px;
-    background-color:#25d366;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    font-size:30px;
-    z-index:100;
-  }
-  
-  .whatsapp-icon {
-    margin-top:10px;
-  }
-
-
-
-/* IR AL TOP */
-
-.back-to-top {
-    position: fixed;
-    display: none;
-    background: rgb(255, 102, 0);
-    border: 2px solid white;
-    color: #fff;
-    width: 44px;
-    height: 44px;
-    text-align: center;
-    font-size: 18px;
-    border-radius: 50%;
-    right: 20px;
-    bottom: 60px;
-    transition: all 0.5s;
-}
-
-.back-to-top i {
-    padding-top: 12px;
-    color: #fff;
-}
